# RemindsMeOfAugustTwentyNine

./: EmailException.py  EmailRepository.py  README.md  app.py  connection.py  main.py  pyproject.toml  requirements.txt
static/: style.css
templates/: 404.html  405.html  500.html  index.html  registered.html  result.html
